--- a/app/views/register.scala.html
+++ b/app/views/register.scala.html
@@ -1,4 +1,4 @@
-@(registrationForm: Form[models.Registration])
+@(registrationForm: Form[models.Registration])(implicit flash: Flash)
 
 @import play.api.i18n._
 @import views.html.helper._
@@ -7,7 +7,7 @@
   <div class="control-group @if(field.hasErrors) {error}">
     <label class="control-label" for="@field.id">@label</label>
     <div class="controls">
-      <input type="@fieldType" value="@field.value" name="@field.id" />
+      <input type="@fieldType.name" value="@field.value" name="@field.id" />
       @if(field.hasErrors){
         <span class="help-inline">
           @Messages(field.error.head.message)
@@ -19,19 +19,21 @@
 
 @main("Super Simple Sample") {
 
-    @* GLOBAL ERROR/FLASH MESSAGE *@
-    @registrationForm.globalError.map { error => 
-      <div class="alert alert-error">@error.message</div>
-    }
-
     @form(action = routes.Register.register, 'class -> "form-horizontal") {
+
       <fieldset>
         <legend>Registration</legend>
+        @* GLOBAL ERROR/FLASH MESSAGE *@
+        @registrationForm.globalError.map { error => 
+          <div class='row'>
+            <div class="alert alert-error" style="margin-left:30px;margin-top:20px;">@error.message</div>
+          </div>
+        }
         @input(registrationForm("username"), "Username")
         @input(registrationForm("password"), "Password", 'password)
         @input(registrationForm("confirm"), "Confirm Password", 'password)
         @input(registrationForm("realName"), "Real Name")
       </fieldset>
-      <input type="submit" class="btn" value="register"/>
+      <input type="submit" class="btn" value="Register"/>
     }
 }
